<resources>
    <string name="app_name">TiketKu</string>
    <string name="text_splash_screen">Wisata Jadi Lebih Asik</string>
    <string name="text_get_started">Discover The Beauty Of Earth</string>
    <string name="new_account">New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="please_fill">Please fill up the forms below for informations</string>
    <string name="email_address">Email Address</string>
    <string name="continuee">Continue</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="let_the_wolrd">Let the world knows yourself more better and ever</string>
    <string name="nama">Nama</string>
    <string name="bio">Bio</string>
    <string name="kamu_hebat">Kamu Hebat</string>
    <string name="selamat_datang">Selamat datang pada TicketSaya dan nikmati wisatamu</string>
    <string name="explore_now">Explore Now</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="main_menus">Main Menus</string>
    <string name="explore_the_beauty">Explore the beauty of world</string>
    <string name="monas">Monas</string>
    <string name="sphinx">Sphinx</string>
    <string name="torri">Torri</string>
    <string name="borobudur">Borobudur</string>
    <string name="pisa">Pisa</string>
    <string name="ticket_tips">Ticket Tips</string>
    <string name="learns_it">Learns it for many benefits</string>
    <string name="menara_pisa">Menara Pisa</string>
    <string name="lokasi_pisa">Pisa City, Italy</string>
    <string name="information">Information</string>
    <string name="knowing_before_travel">Knowing before travel</string>
    <string name="photo_spots">4 Photo Spots</string>
    <string name="tripod_everywhere">Tripod everywhere</string>
    <string name="wifi_available">Wifi Available</string>
    <string name="connect_for_any_tourist">Connect for any tourist</string>
    <string name="_Festivals">13 Festivals</string>
    <string name="dance_and_foods">Dance and Foods</string>
    <string name="the_leaning">The leaning of the Tower of Pisa comes into the story in 1173, when construction began</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="check_the_amount">Check the amount of tickets</string>
    <string name="anak_yg_berumur">Anak yang berumur lebih dari 3 tahun wajib membeli tiket untuk masuk kedalam landmark</string>
    <string name="pricing">Pricing</string>
    <string name="your_current_balance">Your current balance is</string>
    <string name="total_price">Total Price</string>
    <string name="pay_now">Pay Now</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="refund_now">Refund Now</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="anda_berhasil_membeli_tiket">Anda berhasil membeli tiket dan selamat berlibur</string>
    <string name="view_tickets">View Tickets</string>
    <string name="id_profile">Id Profile</string>
    <string name="money">Money</string>
    <string name="pagoda">Pagoda</string>
    <string name="my_ticket">My Ticket</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="we_highly_suggest">We highly suggest you to use the correct informations</string>
</resources>