<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYoungBlue"
    tools:context=".view.RefundTicketActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/bg_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></View>

            <TextView
                android:id="@+id/txtWisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/mregular"
                android:text="@string/ticket_details"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_input"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWisata">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_ticket_buy"></ImageView>

                        <LinearLayout
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/namaWisata"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/mregular"
                                android:text="@string/menara_pisa"
                                android:textColor="@color/colorBlack"
                                android:textSize="18sp"></TextView>

                            <TextView
                                android:id="@+id/lokasiWisata"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/mregular"
                                android:text="@string/lokasi_pisa"
                                android:textColor="@color/colorGray"
                                android:textSize="18sp"></TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginLeft="24dp"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/angka"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/mregular"
                                android:text="3"
                                android:textColor="@color/colorBlue"
                                android:textSize="14sp"></TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:fontFamily="@font/mregular"
                                android:text="Ticket"
                                android:textColor="@color/colorBlue"
                                android:textSize="14sp"></TextView>
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>


                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/idUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:text="@string/date"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:text="@string/date"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:text="January 22, 2018"
                        android:textColor="@color/colorGray"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/time"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:text="10AM to 12PM"
                        android:textColor="@color/colorGray"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/mregular"
                        android:text="@string/information"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"></TextView>

                    <TextView
                        android:id="@+id/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:text="@string/anak_yg_berumur"
                        android:textColor="@color/colorGray"
                        android:textSize="18sp"></TextView>

                    <ImageView
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="24dp"
                        android:layout_gravity="center"
                        android:id="@+id/imageView2"
                        android:layout_width="244dp"
                        android:layout_height="56dp"
                        app:srcCompat="@drawable/ic_barcode" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="3"
                    android:background="@drawable/bg_input"
                    android:padding="8dp"
                    android:src="@drawable/back"></ImageView>

                <Button
                    android:id="@+id/bttnRefundNow"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_pay_now"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/refund_now"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>