<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".view.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="226dp"
                android:layout_height="129dp"
                android:layout_marginTop="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="381dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_input"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/email_address"
                        android:textColor="@color/colorGray"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edtEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bttn_input"
                        android:ems="10"
                        android:fontFamily="@font/mmedium"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/password"
                        android:textColor="@color/colorGray"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bttn_input"
                        android:ems="10"
                        android:fontFamily="@font/mmedium"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bttnSignin"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:background="@drawable/bg_sign_in"
                        android:fontFamily="@font/mmedium"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:fontFamily="@font/mlight"
                android:text="@string/create_new_account"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <View
                android:visibility="gone"
                android:id="@+id/bgLoading"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_signup_loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>